Fix global layout centering and input text visibility

--- a/admin-products/src/features/auth/pages/LoginPage.module.scss
+++ b/admin-products/src/features/auth/pages/LoginPage.module.scss
@@ -118,6 +118,15 @@
   color: #111827;
 }
 
+.input:-webkit-autofill,
+.input:-webkit-autofill:hover,
+.input:-webkit-autofill:focus {
+  -webkit-text-fill-color: #111827;
+  box-shadow: 0 0 0 1000px #f3f4f6 inset;
+  transition: background-color 9999s ease-out;
+  caret-color: #111827;
+}
+
 .error {
   font-size: 12px;
   color: #ef4444;
